[package]
name = "fee-collector"
version = "0.1.0"
description = "RIFTS Fee Collector Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fee_collector"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["default", "token"] }