[package]
name = "fee-collector"
version = "0.1.0"
description = "RIFTS Fee Collector Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fee_collector"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["default", "token"] }
governance = { path = "../governance", features = ["cpi"] }

# **FIX**: Suppress cosmetic Anchor cfg warnings
[lints.rust]
unexpected_cfgs = "allow"