[package]
name = "governance"
version = "0.1.0"
description = "RIFTS Governance Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "governance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["default", "token"] }