[package]
name = "rifts-protocol"
version = "0.1.0"
description = "Rifts Protocol - Wrapped token system with hybrid oracle rebalancing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rifts_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["default", "token"] }

# CPI dependencies
fee-collector = { path = "../fee-collector", features = ["cpi"] }
governance = { path = "../governance", features = ["cpi"] }
lp-staking = { path = "../lp-staking", features = ["cpi"] }