[package]
name = "rifts-protocol"
version = "0.1.0"
description = "Rifts Protocol - Wrap tokens with 0.7% fees + Automatic Meteora-style DLMM Pool Creation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rifts_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["default", "token"] }

# DEX integration dependencies
# jupiter-core = { version = "0.1.0", optional = true }  # Jupiter V6 SDK
# meteora-pools = { version = "0.1.0", optional = true } # Meteora DLMM SDK
# Note: Using direct CPI calls instead of SDKs to avoid version conflicts

# CPI dependencies for cross-program integration
fee-collector = { path = "../fee-collector", features = ["cpi"] }
governance = { path = "../governance", features = ["cpi"] }
lp-staking = { path = "../lp-staking", features = ["cpi"] }